Issue #28925: cPickle now correctly propagates errors when unpickle instances of old-style classes.